force-app/main/default/objects/Development_Records__c/Development_Records__c.object-meta.xml
<CustomObject>
    <label>Development Record</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>DR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>