force-app/main/default/objects/Development_Records__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Not mandatory by Position, but has been achieved</inlineHelpText>
    <label>Additional</label>
    <type>Checkbox</type>
</CustomField>