force-app/main/default/objects/Development_Records__c/fields/Assigned_To_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Unit__c</fullName>
    <formula>Employee__r.Assigned_to_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Unit</label>
    <type>Text</type>
</CustomField>