force-app/main/default/objects/Development_Records__c/fields/Assigned_to_Unit_Client__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Unit_Client__c</fullName>
    <formula>Employee__r.Assigned_to_Unit__r.Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Unit Client</label>
    <type>Text</type>
</CustomField>