force-app/main/default/objects/Development_Records__c/fields/Booking_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmed__c</fullName>
    <description>Communication between HR &amp; Personnel to ensure times and dates are confirmed</description>
    <label>Booking Confirmed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>