force-app/main/default/objects/Development_Records__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>Date employee required to attend training</description>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>