force-app/main/default/objects/Development_Records__c/fields/Booking_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Details__c</fullName>
    <inlineHelpText>Details of Training Date, provider and location</inlineHelpText>
    <label>Booking Details</label>
    <type>TextArea</type>
</CustomField>