force-app/main/default/objects/Development_Records__c/fields/Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time__c</fullName>
    <description>Date/Time that the training is booked for and the employee is required to attend</description>
    <label>Booking Date/Time</label>
    <type>DateTime</type>
</CustomField>