force-app/main/default/objects/Development_Records__c/fields/City_where_reside__c.field-meta.xml
<CustomField>
    <fullName>City_where_reside__c</fullName>
    <label>City (where reside)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>