force-app/main/default/objects/Development_Records__c/fields/Date_Created_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Text__c</fullName>
    <description>Date Created Text</description>
    <formula>TEXT(DATEVALUE( CreatedDate ))</formula>
    <inlineHelpText>Date Created Text</inlineHelpText>
    <label>Date Created (Text)</label>
    <type>Text</type>
</CustomField>