force-app/main/default/objects/Development_Records__c/fields/Date_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Training__c</fullName>
    <description>Actual Date training occurred as per certificate</description>
    <label>Date of Training</label>
    <type>Date</type>
</CustomField>