force-app/main/default/objects/Development_Records__c/fields/Date_Renewal_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Renewal_Required__c</fullName>
    <label>Date Renewal Required</label>
    <type>Date</type>
</CustomField>