force-app/main/default/objects/Development_Records__c/fields/Days_for_renewal_required__c.field-meta.xml
<CustomField>
    <fullName>Days_for_renewal_required__c</fullName>
    <label>Days for renewal required</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>