force-app/main/default/objects/Development_Records__c/fields/Days_Since_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Created__c</fullName>
    <formula>TODAY()  -  Record_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>