force-app/main/default/objects/Development_Records__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Development Records</relationshipLabel>
    <relationshipName>Training_Records</relationshipName>
    <type>Lookup</type>
</CustomField>