force-app/main/default/objects/Development_Records__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by time based workflow to mark the record (Expired).</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>