force-app/main/default/objects/Development_Records__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>IF( Requires_Renewal__c = &quot;No&quot;, null, 
IF( Expiry_Date_Override__c &lt;&gt; Date_of_Training__c, Expiry_Date_Override__c,
IF( AND(Renewal_Period_Days__c  &gt; -1, ISBLANK(Expiry_Date_Override__c)), (Date_of_Training__c  +  Renewal_Period_Days__c),
null )))</formula>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>