force-app/main/default/objects/Development_Records__c/fields/Expiry_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Override__c</fullName>
    <label>Expiry Date Override</label>
    <type>Date</type>
</CustomField>