force-app/main/default/objects/Development_Records__c/fields/Expiry_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Reminder_Date__c</fullName>
    <formula>Expiry_Date__c  -  Number_of_days_for_Reminder_Alert__c</formula>
    <label>Expiry Reminder Date</label>
    <type>Date</type>
</CustomField>