force-app/main/default/objects/Development_Records__c/fields/Expiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Status__c</fullName>
    <label>Expiry Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>