force-app/main/default/objects/Development_Records__c/fields/Geotab__c.field-meta.xml
<CustomField>
    <fullName>Geotab__c</fullName>
    <label>PID #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>