force-app/main/default/objects/Development_Records__c/fields/Is_certificate_attached__c.field-meta.xml
<CustomField>
    <fullName>Is_certificate_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Attached</label>
    <type>Checkbox</type>
</CustomField>