force-app/main/default/objects/Development_Records__c/fields/Local_Gov_Area__c.field-meta.xml
<CustomField>
    <fullName>Local_Gov_Area__c</fullName>
    <formula>TEXT(Employee__r.Local_Gov_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Gov Area</label>
    <type>Text</type>
</CustomField>