force-app/main/default/objects/Development_Records__c/fields/Location_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Training__c</fullName>
    <description>Name of town where training is to be conducted</description>
    <label>Location of Training</label>
    <length>30</length>
    <type>Text</type>
</CustomField>