force-app/main/default/objects/Development_Records__c/fields/No_of_days_left_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_left_for_Renewal__c</fullName>
    <formula>IF(ISNULL(Expiry_Date__c),null,(Expiry_Date__c - TODAY()))</formula>
    <label>Days left till expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>