force-app/main/default/objects/Development_Records__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Provide details of communication to employee with regard to training ie.  Details of Text/Emails</description>
    <label>Notes (Training/Accom/Travel)</label>
    <type>TextArea</type>
</CustomField>