force-app/main/default/objects/Development_Records__c/fields/Number_of_days_for_Reminder_Alert__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_for_Reminder_Alert__c</fullName>
    <formula>Professional_Development_Type__r.Number_Days_for_Expiry_Reminder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days for Reminder Alert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>