force-app/main/default/objects/Development_Records__c/fields/Off_Hitch__c.field-meta.xml
<CustomField>
    <fullName>Off_Hitch__c</fullName>
    <formula>Employee__r.Off_Hitch_Dates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Hitch</label>
    <type>Text</type>
</CustomField>