force-app/main/default/objects/Development_Records__c/fields/On_Shift__c.field-meta.xml
<CustomField>
    <fullName>On_Shift__c</fullName>
    <formula>Employee__r.On_Shift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Shift</label>
    <type>Checkbox</type>
</CustomField>