force-app/main/default/objects/Development_Records__c/fields/PD_Inactive__c.field-meta.xml
<CustomField>
    <fullName>PD_Inactive__c</fullName>
    <formula>Professional_Development_Type__r.Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Inactive</label>
    <type>Checkbox</type>
</CustomField>