force-app/main/default/objects/Development_Records__c/fields/PD_Type__c.field-meta.xml
<CustomField>
    <fullName>PD_Type__c</fullName>
    <formula>Professional_Development_Type__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PD Type</label>
    <type>Text</type>
</CustomField>