force-app/main/default/objects/Development_Records__c/fields/PD_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>PD_Type_Text__c</fullName>
    <label>PD Type Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>