force-app/main/default/objects/Development_Records__c/fields/Personnel_Type__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Type__c</fullName>
    <formula>Employee__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Type</label>
    <type>Text</type>
</CustomField>