force-app/main/default/objects/Development_Records__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>TEXT(Employee__r.Position__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position 1</label>
    <type>Text</type>
</CustomField>