force-app/main/default/objects/Development_Records__c/fields/Position_Id__c.field-meta.xml
<CustomField>
    <fullName>Position_Id__c</fullName>
    <description>This field is created to store the related current position id for employee record.</description>
    <label>Position Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>