force-app/main/default/objects/Development_Records__c/fields/Position_wd__c.field-meta.xml
<CustomField>
    <fullName>Position_wd__c</fullName>
    <formula>Employee__r.PositionLookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>