force-app/main/default/objects/Development_Records__c/fields/Professional_Development_Type__c.field-meta.xml
<CustomField>
    <fullName>Professional_Development_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professional Development Type</label>
    <referenceTo>Professional_Development__c</referenceTo>
    <relationshipLabel>Development Records</relationshipLabel>
    <relationshipName>Development_Record</relationshipName>
    <type>Lookup</type>
</CustomField>