force-app/main/default/objects/Development_Records__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&apos;InProgress&apos;),

IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKb&amp;oid=00D90000000chuS&quot;,&quot;Booked&quot;),

IF(ISPICKVAL(Status__c,&apos;submitted&apos;),

IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKb&amp;oid=00D90000000chuS&quot;,&quot;Submitted&quot;),

IF(ISPICKVAL(Status__c,&apos;booked&apos;),

IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKc&amp;oid=00D90000000chuS&quot;,&quot;Booked&quot;),

IF(ISPICKVAL(Status__c,&apos;complete&apos;),

IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKd&amp;oid=00D90000000chuS&quot;,&quot;Complete&quot;),

IF(ISPICKVAL(Status__c,&apos;expired&apos;),

IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKe&amp;oid=00D90000000chuS&quot;,&quot;Expired&quot;),


IMAGE ( &quot;/servlet/servlet.ImageServer?id=01590000001nPKf&amp;oid=00D90000000chuS&quot;,&quot;Incomplete&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <type>Text</type>
</CustomField>