force-app/main/default/objects/Development_Records__c/fields/Progress_Details__c.field-meta.xml
<CustomField>
    <fullName>Progress_Details__c</fullName>
    <label>Progress Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Link Provided</fullName>
            </value>
            <value>
                <fullName>Workbook Provided</fullName>
            </value>
            <value>
                <fullName>Submitted to RTO</fullName>
            </value>
            <value>
                <fullName>Waiting on Cert</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
                <label>Cert Uploaded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>