force-app/main/default/objects/Development_Records__c/fields/Qualification_Level__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Level__c</fullName>
    <description>Professional Developments requires different levels of achievement to be identified</description>
    <label>Qualification Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>PMASUP236</fullName>
            </value>
            <value>
                <fullName>ISI</fullName>
            </value>
            <value>
                <fullName>DCGI</fullName>
            </value>
            <value>
                <fullName>VOE</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>P1 (Red)</fullName>
            </value>
            <value>
                <fullName>P2 (Green)</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>RIIVEH305F</fullName>
            </value>
            <value>
                <fullName>CA (Auto)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>