force-app/main/default/objects/Development_Records__c/fields/Related_PO__c.field-meta.xml
<CustomField>
    <fullName>Related_PO__c</fullName>
    <label>Related PO #</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>