force-app/main/default/objects/Development_Records__c/fields/Renewal_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Period_Days__c</fullName>
    <formula>Professional_Development_Type__r.Days_until_renewal_is_required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Period (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>