force-app/main/default/objects/Development_Records__c/fields/Required_By__c.field-meta.xml
<CustomField>
    <fullName>Required_By__c</fullName>
    <formula>Professional_Development_Type__r.Required_By__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By</label>
    <type>Text</type>
</CustomField>