force-app/main/default/objects/Development_Records__c/fields/Required_By_Client_Match__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Client_Match__c</fullName>
    <description>This is checked if the PD Required By Matches the Employee&apos;s Assigned to Unit - Client.</description>
    <formula>AND(
    NOT(ISBLANK(Assigned_to_Unit_Client__c)),
    OR(
        LOWER(TRIM(Required_By__c)) = &quot;wild desert&quot;,
        
        OR(
            AND(
                LOWER(TRIM(Assigned_to_Unit_Client__c)) = &quot;santos sa&quot;,
                LOWER(TRIM(Required_By__c)) = &quot;santos glng (qld)&quot;
            ),
            AND(
                LOWER(TRIM(Assigned_to_Unit_Client__c)) = &quot;santos glng (qld)&quot;,
                LOWER(TRIM(Required_By__c)) = &quot;santos sa&quot;
            )
        ),
        
        LOWER(TRIM(Assigned_to_Unit_Client__c)) = LOWER(TRIM(Required_By__c))
    )
)</formula>
    <label>Required By &amp; Client Match</label>
    <type>Checkbox</type>
</CustomField>