force-app/main/default/objects/Development_Records__c/fields/Required_By_Unit__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Unit__c</fullName>
    <description>Conditional on Required by Unit at Professional Development.</description>
    <inlineHelpText>Conditional on Required by Unit at Professional Development.</inlineHelpText>
    <label>Required By Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>