force-app/main/default/objects/Development_Records__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <formula>TEXT( Professional_Development_Type__r.Requirement_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Type</label>
    <type>Text</type>
</CustomField>