force-app/main/default/objects/Development_Records__c/fields/Requires_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Requires_Renewal__c</fullName>
    <formula>TEXT(Professional_Development_Type__r.Requires_Renewal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Renewal</label>
    <type>Text</type>
</CustomField>