force-app/main/default/objects/Development_Records__c/fields/Resides__c.field-meta.xml
<CustomField>
    <fullName>Resides__c</fullName>
    <formula>Employee__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resides</label>
    <type>Text</type>
</CustomField>