force-app/main/default/objects/Development_Records__c/fields/Superseded_By_PD__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By_PD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded By (PD)</label>
    <referenceTo>Professional_Development__c</referenceTo>
    <relationshipLabel>Development Records (Superseded By (PD))</relationshipLabel>
    <relationshipName>Development_Records</relationshipName>
    <type>Lookup</type>
</CustomField>