force-app/main/default/objects/Development_Records__c/fields/Training_Completion_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Training_Completion_Tolerance__c</fullName>
    <description>This date = Created Date + 2 Months Tolerance</description>
    <formula>DATE(
  YEAR(DATEVALUE(Date_Created_Text__c)) + FLOOR((MONTH(DATEVALUE(Date_Created_Text__c)) + 2 - 1) / 12),
  MOD(MONTH(DATEVALUE(Date_Created_Text__c)) + 2 - 1, 12) + 1,
  DAY(DATEVALUE(Date_Created_Text__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This date = Created Date + 2 Months Tolerance</inlineHelpText>
    <label>Training Completion Tolerance</label>
    <type>Date</type>
</CustomField>