force-app/main/default/objects/Development_Records__c/fields/Training_Provider__c.field-meta.xml
<CustomField>
    <fullName>Training_Provider__c</fullName>
    <label>Training Provider</label>
    <type>TextArea</type>
</CustomField>