force-app/main/default/objects/Development_Records__c/fields/Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Id__c</fullName>
    <description>This field is created to store the current unit id related to employee record.</description>
    <label>Unit Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>