force-app/main/default/objects/Development_Records__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>