force-app/main/default/objects/Development_Records__c/listViews/afm.listView-meta.xml
<ListView>
    <fullName>afm</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Professional_Development_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>Position_wd__c</columns>
    <columns>On_Shift__c</columns>
    <columns>Date_of_Training__c</columns>
    <columns>Progress_Details__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete,In Progress,Complete</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>Professional_Development_Type__c</field>
        <operation>contains</operation>
        <value>fatigue</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Development_Records__c.Standard</value>
    </filters>
    <filters>
        <field>PD_Inactive__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>TPT - Advanced Fatigue Training</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>