force-app/main/default/objects/Development_Records__c/listViews/All_BOP.listView-meta.xml
<ListView>
    <fullName>All_BOP</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Professional_Development_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>Position_wd__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Local_Gov_Area__c</columns>
    <columns>Date_of_Training__c</columns>
    <columns>Training_Provider__c</columns>
    <columns>Location_of_Training__c</columns>
    <columns>Notes__c</columns>
    <columns>Progress_Details__c</columns>
    <columns>Status__c</columns>
    <columns>No_of_days_left_for_Renewal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete,In Progress</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Development_Records__c.Standard</value>
    </filters>
    <filters>
        <field>Professional_Development_Type__c</field>
        <operation>contains</operation>
        <value>BOP Training</value>
    </filters>
    <label>All BOP - Incomplete</label>
    <sharedTo>
        <group>HR</group>
    </sharedTo>
</ListView>