force-app/main/default/objects/Development_Records__c/listViews/All_BOP_Expiring_2_Months.listView-meta.xml
<ListView>
    <fullName>All_BOP_Expiring_2_Months</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Professional_Development_Type__c</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Expiry_Reminder_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>No_of_days_left_for_Renewal__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Professional_Development_Type__c</field>
        <operation>contains</operation>
        <value>BOP</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete,In Progress,Complete</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Development_Records__c.Standard</value>
    </filters>
    <filters>
        <field>No_of_days_left_for_Renewal__c</field>
        <operation>lessThan</operation>
        <value>60</value>
    </filters>
    <label>All BOP Expiring in the next 2 Months</label>
    <sharedTo>
        <group>HR</group>
        <group>Safety</group>
    </sharedTo>
</ListView>