force-app/main/default/objects/Development_Records__c/listViews/All_HR_Licences_Non_Required_by_P.listView-meta.xml
<ListView>
    <fullName>All_HR_Licences_Non_Required_by_P</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 and 5 and 6 and 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Professional_Development_Type__c</columns>
    <columns>Qualification_Level__c</columns>
    <columns>Employee__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Position_wd__c</columns>
    <columns>Date_of_Training__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>No_of_days_left_for_Renewal__c</columns>
    <columns>Notes__c</columns>
    <columns>Progress_Details__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Complete,Expired</value>
    </filters>
    <filters>
        <field>PD_Type__c</field>
        <operation>equals</operation>
        <value>licensing</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Development_Records__c.Standard</value>
    </filters>
    <filters>
        <field>Position_wd__c</field>
        <operation>notContain</operation>
        <value>Mechanic,Mechanic Supervisor,Derrickman*,Driller,Driller*,Assistant Driller*,Rig Manager</value>
    </filters>
    <filters>
        <field>Professional_Development_Type__c</field>
        <operation>equals</operation>
        <value>Licence HR</value>
    </filters>
    <filters>
        <field>No_of_days_left_for_Renewal__c</field>
        <operation>lessThan</operation>
        <value>90</value>
    </filters>
    <label>All HR Licences &gt; Non Required by P</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Safety</group>
    </sharedTo>
</ListView>