force-app/main/default/objects/Development_Records__c/listViews/All_Online_1_Incomplete.listView-meta.xml
<ListView>
    <fullName>All_Online_1_Incomplete</fullName>
    <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Professional_Development_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>Position_wd__c</columns>
    <columns>Assigned_To_Unit__c</columns>
    <columns>Local_Gov_Area__c</columns>
    <columns>Date_of_Training__c</columns>
    <columns>Training_Provider__c</columns>
    <columns>Notes__c</columns>
    <columns>Progress_Details__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <filters>
        <field>PD_Type__c</field>
        <operation>equals</operation>
        <value>online</value>
    </filters>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Development_Records__c.Standard</value>
    </filters>
    <label>All Online &gt; 1 Incomplete</label>
</ListView>